# kupier-db

./: .gitignore  Cargo.toml  README.md
docs/: research_notes.md
docs/diagrams/: cluster-architecture.excalidraw  component-architecture.excalidraw
docs/v1/: research_notes.md
kuiper-core/: Cargo.toml
kuiper-core/src/: kuiper.rs
kuiper-core/src/schema/: information_schema.rs
kuiper-core/src/storage/: mod.rs
kuiper-engine/: Cargo.toml
kuiper-engine/src/execution/: mod.rs
kuiper-engine/src/plan/: mod.rs
kuiper-engine/src/types/: expression.rs  mod.rs
kuiper-lang/: Cargo.toml  readme.md
kuiper-lang/src/: lib.rs  tests.rs
kuiper-server/: Cargo.toml
kuiper-server/src/: main.rs
kuiper-test/: Cargo.toml
kuiperdb-core/: Cargo.toml
kuiperdb-core/src/: kuiper.rs  lib.rs
kuiperdb-core/src/error/: mod.rs
kuiperdb-core/src/schema/: information_schema.rs
kuiperdb-core/src/storage/kv/: mod.rs
kuiperdb-core/src/storage/rocksdb/: mod.rs
kuiperdb-engine/: Cargo.toml
kuiperdb-engine/src/: lib.rs
kuiperdb-engine/src/execution/: mod.rs
kuiperdb-engine/src/plan/: mod.rs
kuiperdb-engine/src/types/: expression.rs  mod.rs
kuiperdb-gateway/: Cargo.toml
kuiperdb-gateway/src/: main.rs
kuiperdb-lang/: Cargo.toml
kuiperdb-lang/benches/: parser.rs
kuiperdb-lang/src/: ast.rs  lib.rs  parser.rs  tests.rs
kuiperdb-test/: Cargo.toml
kuiperdb-test/src/: main.rs
kupier-core/: Cargo.toml
kupier-core/src/: kupier.rs  lib.rs
kupier-core/src/db/: information_schema.rs  mod.rs
kupier-core/src/err/: mod.rs
kupier-core/src/error/: mod.rs
kupier-core/src/schema/: mod.rs
kupier-core/src/storage/rocksdb/: mod.rs
kupier-engine/: Cargo.toml
kupier-engine/src/: lib.rs
kupier-engine/src/execution/: mod.rs
kupier-engine/src/plan/: mod.rs
kupier-engine/src/types/: expression.rs  mod.rs
kupier-lang/: Cargo.toml
kupier-lang/benches/: parser.rs
kupier-lang/src/: as_built.kla  ast.rs  example_query.kla  grammar.pest  parser.rs  tests.rs
kupier-server/: Cargo.toml
kupier-server/src/: main.rs
kupier-test/: Cargo.toml
kupier-test/src/: main.rs
original/: Cargo.toml  README.md
original/kupier-core/: Cargo.toml
original/kupier-core/src/db/: mod.rs
original/kupier-core/src/storage/: engine.rs
original/kupier-core/src/storage/page/: data.rs  mod.rs  super_page.rs
original/kupier-storage/: Cargo.toml
original/kupier-storage/src/: lib.rs
original/kupier-storage/src/engine/: mod.rs
original/kupier-test/: Cargo.toml
original/kupier-test/src/: main.rs
