[package]
name = "kuiper-core"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "~2.2.0"
lazy_static = "~1.4.0"
regex = "1.5.4"

# Stuff for serialization ...
bincode = "1.3.3"
bson = "2.0.1"
serde = "~1.0.130"
serde_derive = "~1.0.130"
serde_json = "1.0.69"
serde_bytes = "0.11.5"
log = "0.4.14"
thiserror = "1.0.40"
futures = "0.3"

# Async / Await
tokio = "1.19.2"
sqlparser = "0.12.0"

[dependencies.rocksdb]
version = "0.21.0"
features = [
    "multi-threaded-cf"
]

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]