[package]
name = "kuiperdb-engine"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuiperdb-core = { path = "../kuiperdb-core" }
kuiperdb-lang = { path = "../kuiperdb-lang" }

derivative = "2"
serde = "1"
serde_derive = "1"
regex = "1"
bson = { version = "2.6.0", features = ["uuid-1"] }

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
