[package]
name = "kuiperdb-gateway"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
kuiperdb-lang = { path = "../kuiperdb-lang" }
kuiperdb-core = { path = "../kuiperdb-core" }
kuiperdb-engine = { path = "../kuiperdb-engine" }
log = "0.4.14"
log4rs = "1.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bson = "2.0.1"
serde = "~1.0.130"
serde_derive = "~1.0.130"
serde_json = "1.0.69"
serde_bytes = "0.11.5"
bincode = "1.3.3"
rayon = "1.7.0"

[dev-dependencies]