[package]
name = "kupier-lang"
version = "0.1.0"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Language Parsing Support
# pest = { version = "2", default-features = false }
# pest_derive = { version = "2", default-features = false }
pest = { version = "2" }
pest_derive = { version = "2" }

# Stuff for serialization ...
serde = "1"
serde_derive = "1"

# Misc
log = "0.4"
derivative = "2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser"
harness = false