[package]
name = "kupier-test"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "2" }
kupier-lang = { path = "../kupier-lang" }
kupier-core = { path = "../kupier-core" }
log = "0.4.14"
log4rs = "1.0.0"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] } # "1.19.2"
bson = "2.0.1"
serde = "~1.0.130"
serde_derive = "~1.0.130"
serde_json = "1.0.69"
serde_bytes = "0.11.5"
bincode = "1.3.3"
rayon = "1.7.0"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]